# Intelligent_report_generation

./: README.md  pyproject.toml
backend/agents/: Chat_Search_Agent.py  Graph_Agent.py  Search_Agent.py  Structure_Agent.py  prompts.py  streaming.py  tools.py
backend/database/: chroma_manager.py  loader.py
database/: loader.py
database/docs/: 01一周要闻_事关量子科技，工信部最新发声.docx  02一周要闻_摩根士丹利报告预测量子安全网络的未来发展.docx  03一周要闻_量子科技写入二十届三中全会《决定》.docx
frontend/: Report.py
frontend/pages/: 01_Knowledge_Base.py  01_情报知识库.py  02_情报问题检索.py
